--- a/Aulas/Atividade03/index.html
+++ b/Aulas/Atividade03/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         <title>Bootstrap - Aula</title>
         <meta charset="UTF-8">
@@ -52,98 +52,108 @@
             </ul>
         </nav>
         <div class="container mt-3">
-            <div class="row mb-3">
-                <div class="col-md-12 col-sm-12 mb-2">
-                    <form
-                        class="cmxform"
-                        id="formExemplo"
-                        method="get"
-                        action
-                    >
-                        <fieldset>
-                            <!--https://jqueryvalidation.org/documentation/-->
-                            <div class="form-group">
-                                <label for="txtnome">Nome</label>
-                                <input
-                                    type="text"
-                                    class="form-control"
-                                    placeholder="nome aqui"
-                                    id="txtnome"
-                                    required
-                                    minlength="2"
-                                    name="txtnome"
-                                >
-                            </div>
-                            <div class="form-group">
-                                <label for="txtfilho">Nº de filhos</label>
-                                <input
-                                    type="number"
-                                    step="1"
-                                    class="form-control"
-                                    id="txtfilho"
-                                    min="0"
-                                    max="10"
-                                    name="txtfilho"
-                                    required
-                                    placeholder="nº de filho aqui"
-                                >
-                            </div>
-                            <div class="form-group">
-                                <label for="txtemail">E-mail</label>
-                                <input
-                                    type="email"
-                                    class="form-control"
-                                    placeholder="e-mail aqui"
-                                    id="txtemail"
-                                    name="txtemail"
-                                    required
-                                >
-                            </div>
-                            <div class="form-group">
-                                <label for="txtdate">Data de admissão</label>
-                                <input
-                                    type="date"
-                                    class="form-control"
-                                    placeholder="data de admissão aqui"
-                                    id="txtdate"
-                                    name="txtdate"
-                                    required
-                                >
-                            </div>
-                            <div class="form-group">
-                                <label for="txturl">Endereço Rede Social (url)</label>
-                                <input
-                                    type="url"
-                                    class="form-control"
-                                    placeholder="endereço rede social (url) aqui"
-                                    id="txturl"
-                                    name="txturl"
-                                    required
-                                >
-                            </div>
-                            <div class="form-group">
-                                <label for="txtsalario">Salário</label>
-                                <input
-                                    type="number"
-                                    step="0.5"
-                                    class="form-control"
-                                    id="txtsalario"
-                                    min="2000"
-                                    max="10000"
-                                    name="txtsalario"
-                                    placeholder="salário aqui"
-                                >
-                            </div>
-                            <input type="submit" class="btn btn-danger" value="Enviar">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="#">Home</a>
+                    </li>
+                </ol>
+            </nav>
+            <div class="row">
+                <div class="col-md-4 col-sm-12 mb-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Título do card</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">
+                                Subtitulo
+                                do card
+                            </h6>
+                            <p class="card-text">
+                                Um exemplo de texto rápido para
+                                construir o título do card e fazer preencher o
+                                conteúdo do card.
+                            </p>
+                            <a href="#" class="card-link">Link do card</a>
+                            <a href="#" class="card-link">Outro link</a>
                         </div>
-                    </fieldset>
-                </form>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 mb-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Título do card</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">
+                                Subtitulo
+                                do card
+                            </h6>
+                            <p class="card-text">
+                                Um exemplo de texto rápido para
+                                construir o título do card e fazer preencher o
+                                conteúdo do card.
+                            </p>
+                            <a href="#" class="card-link">Link do card</a>
+                            <a href="#" class="card-link">Outro link</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 mb-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Título do card</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">
+                                Subtitulo
+                                do card
+                            </h6>
+                            <p class="card-text">
+                                Um exemplo de texto rápido para
+                                construir o título do card e fazer preencher o
+                                conteúdo do card.
+                            </p>
+                            <a href="#" class="card-link">Link do card</a>
+                            <a href="#" class="card-link">Outro link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--fim row-->
+            <div class="row">
+                <div class="col-md-8 col-sm-12 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <iframe
+                                width="100%"
+                                height="315"
+                                src="https://www.youtube.com/embed/S45kHeWnT0M?si=tEM86J_IokliNMW8"
+                                title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin"
+                                allowfullscreen
+                            ></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 mb-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3670.304234737327!2d-47.20515972545756!3d-23.085956244297464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b4b183d3173b%3A0xe4e10e5dd84bd49e!2sFatec!5e0!3m2!1spt-BR!2sbr!4v1716983275274!5m2!1spt-BR!2sbr"
+                                width="100%"
+                                height="315"
+                                style="border:0;"
+                                allowfullscreen
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                            ></iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Footer 
-            peguei esse https://bootsnipp.com/snippets/rlXdE
-            tem mais em https://bootsnipp.com/tags/footer/4
-            -->
+        peguei esse https://bootsnipp.com/snippets/rlXdE
+        tem mais em https://bootsnipp.com/tags/footer/4
+        -->
         <section id="footer">
             <div class="container">
                 <div class="row text-center text-xs-center text-sm-left text-md-left">
@@ -152,74 +162,66 @@
                         <ul class="list-unstyled quick-links">
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    Home
+                                    <i class="fa fa-angle-double-right"></i>Home
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    About
+                                    <i class="fa fa-angle-double-right"></i>About
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    FAQ
+                                    <i class="fa fa-angle-double-right"></i>FAQ
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
                                     <i class="fa fa-angle-double-right"></i>
                                     Get
-                                        Started
+                                    Started
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    Videos
+                                    <i class="fa fa-angle-double-right"></i>Videos
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="col-sm-12 col-md-4">
                         <h5>Quick links</h5>
                         <ul class="list-unstyled quick-links">
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    Home
+                                    <i class="fa fa-angle-double-right"></i>Home
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    About
+                                    <i class="fa fa-angle-double-right"></i>About
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    FAQ
+                                    <i class="fa fa-angle-double-right"></i>FAQ
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
                                     <i class="fa fa-angle-double-right"></i>
                                     Get
-                                        Started
+                                    Started
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.fiverr.com/share/qb8D02">
-                                    <i class="fa fa-angle-double-right"></i>
-                                    Videos
+                                    <i class="fa fa-angle-double-right"></i>Videos
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
+                    <div class="col-sm-12 col-md-4  mt-sm-5">
                         <div class="card">
                             <div class="card-body">
                                 <iframe
@@ -236,35 +238,30 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                    <div class="col-sm-12 col-md-12 mt-2 mt-sm-5">
                         <ul class="list-unstyled list-inline social text-center">
                             <li class="list-inline-item">
-                                <a href="https://www.fiverr.com/share/qb8D02" title="descrição">
+                                <a href="https://www.fiverr.com/share/qb8D02">
                                     <i class="fa fa-facebook"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.fiverr.com/share/qb8D02" title="descrição">
+                                <a href="https://www.fiverr.com/share/qb8D02">
                                     <i class="fa fa-twitter"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.fiverr.com/share/qb8D02" title="descrição">
+                                <a href="https://www.fiverr.com/share/qb8D02">
                                     <i class="fa fa-instagram"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.fiverr.com/share/qb8D02" title="descrição">
+                                <a href="https://www.fiverr.com/share/qb8D02">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a
-                                    rel="noopener"
-                                    href="https://www.fiverr.com/share/qb8D02"
-                                    target="_blank"
-                                    title="descrição"
-                                >
+                                <a href="https://www.fiverr.com/share/qb8D02" target="_blank">
                                     <i class="fa fa-envelope"></i>
                                 </a>
                             </li>
@@ -273,27 +270,21 @@
                     <hr>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                    <div class="col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
                         <p>
                             <u>
                                 <a href="https://www.nationaltransaction.com/">
                                     National
-                                        Transaction Corporation
+                                    Transaction Corporation
                                 </a>
                             </u>
                             is a
-                                Registered MSP/ISO of Elavon, Inc. Georgia [a wholly
-                                owned subsidiary of U.S. Bancorp, Minneapolis,
-                                MN]
+                            Registered MSP/ISO of Elavon, Inc. Georgia [a wholly
+                            owned subsidiary of U.S. Bancorp, Minneapolis,
+                            MN]
                         </p>
-                        <p class="h6">
-                            © All right Reversed.
-                            <a
-                                rel="noopener"
-                                class="text-green ml-2"
-                                href="https://www.sunlimetech.com"
-                                target="_blank"
-                            >Sunlimetech</a>
+                        <p class="h6">© All right Reversed.
+                            <a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Sunlimetech</a>
                         </p>
                     </div>
                     <hr>
@@ -302,14 +293,7 @@
         </section>
         <!-- ./Footer -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <!--validação-->
-        <script src="http://jqueryvalidation.org/files/dist/jquery.validate.js"></script>
-        <!--regras adicionais de validação-->
-        <script src="http://jqueryvalidation.org/files/dist
-            /additional-methods.min.js"></script>
-        <!--seu script de validação-->
-        <script src="js/validacao.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
